fix double scrollbar

--- a/pages/mailingList/mailingList.css
+++ b/pages/mailingList/mailingList.css
@@ -1,7 +1,6 @@
 ﻿.mailingList .scroll-line {
     overflow-x: auto;
     overflow-y: auto;
-    height: 79vh;
 }
 
 .mailingList * {
